--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,15 @@
     <string name="finished_reading">Finished Reading</string>
     <string name="add_to_wish_list">Add To Wish List</string>
     <string name="add_to_favorite">Add To Favorite</string>
+
+    <string name="add_a_book">Add a book</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="name_add">Name</string>
+    <string name="author_add">Author</string>
+    <string name="pages_add">Pages</string>
+    <string name="image_url_add">Image URL</string>
+    <string name="short_desc_add">Short description</string>
+    <string name="long_desc_add">Long description</string>
+
 </resources>
