--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="about">About</string>
     <string name="book_details">Book Details</string>
     <string name="license">Developed by Nguyen Toan Thang</string>
-    <string name="book_name">Book Name:</string>
+    <string name="book_title">Title:</string>
     <string name="book_name_demo">The Mysterious</string>
     <string name="logo_description">App Logo</string>
     <string name="author">Author:</string>
@@ -27,7 +27,7 @@
     <string name="add_a_book">Add a book</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
-    <string name="name_add">Name</string>
+    <string name="title_add">Title</string>
     <string name="author_add">Author</string>
     <string name="pages_add">Pages</string>
     <string name="image_url_add">Image URL</string>
