--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="add_to_favorite">Add To Favorite</string>
 
     <string name="add_a_book">Add a book</string>
-    <string name="add">Add</string>
+    <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="title_add">Title</string>
     <string name="author_add">Author</string>
