--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="add_a_book">Add a book</string>
     <string name="edit_book">Edit book</string>
     <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="title_add">Title</string>
