--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="image_url_add">Image URL</string>
     <string name="short_desc_add">Short description</string>
     <string name="long_desc_add">Long description</string>
+    <string name="genre_add">Genre:</string>
 
     <string name="general_error">Something went wrong. Please try again later.</string>
     <string name="update_success">Updated successfully</string>
