--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="logo_description">App Logo</string>
     <string name="author">Author:</string>
     <string name="pages">Pages:</string>
+    <string name="genre">Genre:</string>
     <string name="author_name">Thang</string>
     <string name="number">150</string>
     <string name="short_desc">Description:</string>
