--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,10 +43,12 @@
     <string name="general_error">Something went wrong. Please try again later.</string>
     <string name="update_success">Updated successfully</string>
     <string name="add_success">You added a new book</string>
+    <string name="delete_confirm">Are you sure you want to delete this book?</string>
     <string name="delete_success">This book has been deleted</string>
     <string name="stop_playing_first">Please stop playing first</string>
-    <string name="require_permission">This functionality requires your permissions to work</string>
+    <string name="require_permission">This functionality requires your permission to work</string>
     <string name="permission_granted">Permission granted</string>
+    <string name="overwrite_current_audio">Recording again will overwrite your current audio. Do you wish to continue?</string>
 
     <!-- General -->
     <string name="no_data">No Data</string>
@@ -54,5 +56,9 @@
     <string name="play">Play</string>
     <string name="record">Record</string>
     <string name="book_image">Book Image</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="visit">Visit</string>
+    <string name="dismiss">Dismiss</string>
 
 </resources>
