--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,5 +60,8 @@
     <string name="no">No</string>
     <string name="visit">Visit</string>
     <string name="dismiss">Dismiss</string>
+    <string name="stopped">Stopped</string>
+    <string name="playing">Playing</string>
+    <string name="finished">Finished</string>
 
 </resources>
